<resources>
    <string name="app_name">PersonalBest</string>
    <string name="action_settings">Settings</string>
    <string name="steps">steps</string>
    <string name="distance">miles</string>
    <string name="time">time elapsed</string>
    <string name="default_step">0</string>
    <string name="default_time">0:00:00</string>
    <string name="end_walk">End Walk</string>
    <string name="main_step_default">STEPS</string>
    <string name="start_walk_button">Start Walk</string>
    <string name="stats">Statistics</string>
    <string name="dialog_choose_goal">Please Choose A New Goal</string>
    <string name="dialog_not_now">Not Now</string>
    <string name="dialog_custom">Use Custom</string>
    <string name="dialog_hint">Enter Custom</string>
    <string name="goal_button">Goal:</string>
    <string name="default_goal">Goal</string>
    <string name="default_speed">0.0</string>
    <string name="speed_unit">MPH</string>
    <string name="update_button">UPDATE</string>
    <string name="mock_step">MOCK 500</string>
    <string name="stop_mock">STOPMOCK</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="web_client_id">671046782201-jbe125126at9dluepdffn7fvstffl6ck.apps.googleusercontent.com</string>
    <string name="users">Users</string>
    <string name="menu_friends">Friends</string>
    <string name="send_friend_request">Send Friend Request</string>
    <string name="decline_btn_text">DECLINE FRIEND REQUEST</string>
    <string name="cancel_friend_request">Cancel Request</string>
    <string name="accept_friend_request">Accept Request</string>
    <string name="view_friend_history">VIEW HISTORY</string>
    <string name="chat">CHAT</string>
    <string name="message_hint">Enter Message...</string>
    <string name="default_text">default</string>
</resources>
